testsuite/tests/properties/invalid_lazy_field/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Number(@number))
}

@metadata struct Metadata {
    @used_in_equality flag: Bool
}

class Number: FooNode {
}
